making sure copy-left-graphic-right component is aligned correctly at large screen widths

--- a/styles/partials/layout/slices/copyleftgraphrightTwo.scss
+++ b/styles/partials/layout/slices/copyleftgraphrightTwo.scss
@@ -11,6 +11,7 @@
     flex-direction: row;
     align-items: center;
     max-width: 1300px;
+    margin: auto;
     @include tablet {
       flex-direction: column;
       height: auto;
